# self-form-3d-testbed

./: CMakeLists.txt  README.md  a.sc3  speed_charm_3d.c  speed_charm_3d.h  test_game_1_contents_main.cpp  test_game_1_contents_main.hpp
graphic_engine/: glsys_vertex_package.hpp
sc3_loader/: fbx_to_speed_charm_3d.c  fbx_to_speed_charm_3d.h  sc3_lib.h
shader/: main_shader.vert
src/prog_cpp/: cpp_standard_lib.hpp  std_file_manger.cpp  std_file_manger.hpp
